load("@fmeum_rules_jni//jni:defs.bzl", "java_jni_library")

java_binary(
    name = "junit",
    create_executable = False,
    runtime_deps = [":fuzz_test"],
)

java_jni_library(
    name = "fuzz_test",
    srcs = [
        "FuzzTest.java",
        "FuzzTestArgumentProvider.java",
    ],
    native_libs = ["//driver/src/main/native/com/code_intelligence/jazzer/driver:fuzzed_data_provider_standalone"],
    deps = [
        "//agent/src/main/java/com/code_intelligence/jazzer/agent:agent_lib",
        "//agent/src/main/java/com/code_intelligence/jazzer/runtime:fuzzed_data_provider",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@net_bytebuddy_byte_buddy_agent//jar",
    ],
)
